--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ channels-redis==4.1.0
 dj-database-url==2.0.0
 Django==4.2.3
 django-cors-headers==4.2.0
+gunicorn==21.2.0
 msgpack==1.0.5
+packaging==23.1
 psycopg2-binary==2.9.6
+python-dotenv==1.0.0
 redis==4.6.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
