--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,9 @@
-[tool.poetry.dependencies]
-python = "^3.7"
+[tool.poetry]
+name = "Virtual_App"
+version = "1.6.0.dev0"
+description = "Virtual Meeting App"
+authors = ["BrodaOJ <brodaoj2@gmail.com>"]
+
+[build-system]
+requires = ["poetry>=1.0"]
+build-backend = "poetry.masonry.api"
