--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ channels-redis==4.1.0
 dj-database-url==2.0.0
 Django==4.2.3
 django-cors-headers==4.2.0
+django-environ==0.10.0
 gunicorn==21.2.0
 msgpack==1.0.5
 packaging==23.1
